remove styling of image to avoid stretching

--- a/src/components/JobDetails/JobDetails.scss
+++ b/src/components/JobDetails/JobDetails.scss
@@ -49,8 +49,6 @@
 
   &__right {
     width: 550px;
-    display: flex;
-    align-items: center;
 
     &-image {
       width: inherit;
